# WebSocketDemo

src/: CMakeLists.txt  main.cpp  make.sh  my_program
src/Log/: logger.cc
src/task/: TaskWebSocket.cpp  TaskWebSocket.h
src/websocketService/: WebSocketService.cpp  WebSocketService.h
src/websocketWorkLayer/: WSWorkLayerImp.cpp  WSWorkLayerImp.h
